Made fields in the property grid wrappable to support long texts, fixed date rendering

--- a/src/PartKeepr/FrontendBundle/Resources/public/css/PartKeepr.css
+++ b/src/PartKeepr/FrontendBundle/Resources/public/css/PartKeepr.css
@@ -38,3 +38,7 @@
     font-size: 14px;
     line-height: 16px;
 }
+
+.x-wrappable-grid .x-grid-cell-inner {
+    white-space: normal;
+}
